@@ -125,8 +125,8 @@ PHP 8.5 UPGRADE NOTES
     last_error to EBADF and raises an E_WARNING message.
 
 - Sockets:
-  . socket_create_listen throws a ValueError if the port is
-    lower than 0 or greater than 65535.
+  . socket_create_listen and socket_bind throw a ValueError
+    if the port is lower than 0 or greater than 65535.
 
 - Zlib:
   . The "use_include_path" argument for the
